--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server",
-    "watch:sass": "sass --watch ./css/sass/main.scss:./css/styles.css"
+    "sass": "sass --watch ./css/sass/main.scss:./css/styles.css"
   },
   "keywords": [],
   "author": "",
